<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_salary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robertkaczmarek.wynagrodzeniacalculator.SalaryActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/infor">
    <TextView
        android:id="@+id/textinf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textSize="20dp"/>
    </ScrollView>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sal"
        android:entries="@array/salaryKind"
        android:layout_below="@id/infor"
        android:layout_marginTop="20dp">

    </Spinner>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightSalary"
        android:hint="@string/hSalary"
        android:layout_below="@id/infor"
        android:layout_toRightOf="@id/sal"
        android:layout_alignBottom="@id/sal"
        android:layout_marginLeft="60dp"
        android:inputType="number"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sal"
        android:layout_alignLeft="@id/infor"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/grup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnkosztyA"
            android:id="@+id/btnA"
            android:onClick="onRadio"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnkosztyB"
            android:id="@+id/btnB"
            android:onClick="onRadio"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zus"
        android:layout_below="@id/grup"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@id/grup"
        android:text="@string/zus"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countZus"
        android:layout_toRightOf="@id/zus"
        android:layout_alignBottom="@id/zus"
        android:layout_marginLeft="80dp"
            android:text="                       "
        android:background="@android:color/darker_gray"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pit"
        android:layout_below="@id/zus"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/zus"
        android:text="@string/pit"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countPit"
        android:layout_toRightOf="@id/pit"
        android:layout_alignBottom="@id/pit"
        android:layout_alignLeft="@id/countZus"
        android:text="                       "
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zdr"
        android:layout_below="@id/pit"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/zus"
        android:text="@string/zdr"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countZdr"
        android:layout_toRightOf="@id/zdr"
        android:layout_alignBottom="@id/zdr"
        android:layout_alignLeft="@id/countPit"
        android:text="                       "
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/netto"
        android:layout_below="@id/zdr"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/zdr"
        android:text="@string/salaryN"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countNetto"
        android:layout_toRightOf="@id/netto"
        android:layout_alignBottom="@id/netto"
       android:layout_alignLeft="@id/countZdr"
        android:text="                       "
        android:background="@android:color/darker_gray"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:id="@+id/count"
        android:layout_alignLeft="@id/netto"
        android:layout_below="@id/netto"
        android:text="@string/count"
        android:onClick="Count"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:id="@+id/clear"
        android:layout_alignLeft="@id/countPit"
        android:layout_alignBottom="@id/count"
        android:text="@string/clear"
        android:onClick="Clear"/>

</RelativeLayout>
