<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_holiday"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robertkaczmarek.wynagrodzeniacalculator.HolidayActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/infoholiday">
        <TextView
            android:id="@+id/textinf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holiday"
            android:textSize="20dp"/>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/schoolChose"
        android:layout_below="@id/infoholiday"
        android:layout_marginTop="30dp"
        android:text="@string/schoolChose"
        android:paddingLeft="10dp"

        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hol"
        android:entries="@array/school"
        android:layout_below="@id/infoholiday"
        android:layout_toRightOf="@+id/schoolChose"
        android:layout_marginLeft="40dp"
       android:layout_marginTop="30dp"
        >

    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yersWork"
        android:layout_below="@+id/schoolChose"
        android:layout_alignLeft="@+id/schoolChose"
        android:paddingLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/yersWork"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/counHoliday"
        android:layout_below="@+id/hol"
        android:layout_alignLeft="@+id/hol"
       android:text=""
        android:layout_alignBottom="@+id/yersWork"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/day"
        android:layout_below="@+id/yersWork"
        android:layout_alignLeft="@+id/yersWork"
        android:paddingLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/day"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="10dp"
        android:id="@+id/dayHoliday"
        android:layout_below="@+id/counHoliday"
        android:layout_alignLeft="@+id/counHoliday"
        android:layout_marginTop="30dp"
       android:layout_alignBottom="@+id/day"
        android:background="@android:color/darker_gray"

        android:layout_toRightOf="@+id/day"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/d"
        android:layout_toRightOf="@+id/dayHoliday"
        android:layout_alignBottom="@+id/dayHoliday"
        android:text="@string/d"
        android:layout_marginLeft="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnday"
        android:layout_below="@+id/dayHoliday"
        android:layout_marginTop="50dp"
        android:onClick="countDayHoliday"
        android:text="@string/countHoliday"
        />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/celarDay"
    android:text="@string/cleraDay"
    android:layout_marginLeft="50dp"
    android:layout_toRightOf="@id/btnday"
    android:layout_alignBottom="@id/btnday"
    android:onClick="czysc"/>

</RelativeLayout>
